Features section complete.Overlapping issue solved

--- a/do/brad-html-css-sass/hotel-website-basic-css-project/hotel-website-retake/css/style.css
+++ b/do/brad-html-css-sass/hotel-website-basic-css-project/hotel-website-retake/css/style.css
@@ -166,7 +166,7 @@ nav {
 /* Home Info Section */
 
 #home-info {
-    height: 350px;
+    height: 50vh;
 }
 
 #home-info-img {
@@ -181,7 +181,7 @@ nav {
     width: 50%;
     height: 100%;
     text-align: center;
-    padding-top: 120px;
+    padding-top: 15vh;
 }
 
 #home-info-content p {
@@ -191,7 +191,7 @@ nav {
 /* Features Section */
 
 #features {
-    height: 300px;
+    height: 50vh;
 }
 
 .feature-box {
@@ -199,7 +199,7 @@ nav {
     height: 100%;
     float:left;
     text-align: center;
-    padding: 100px 20px;
+    padding: 15vh 5vw;
 }
 
 .feature-box p {
@@ -265,20 +265,20 @@ nav {
     /* Home Info Section */
 
     #home-info {
-        height: ;
+        height: 100vh; /*Setting a height of 100vh for this section*/
     }
 
     #home-info-img {
         float: none;
         width: 100%;
-        height: 100%;   
+        height: 50%;   /*Setting a height of 50vh for image and the text content each*/
         background: url('../assets/photo-1.jpg') no-repeat center center;
     }
 
     #home-info-content {
         float: none;
         width: 100%;
-        height: 100%;
+        height: 50%; /*Setting a height of 50vh for image and the text content each*/
         text-align: center;
         padding-top: 120px;
     }
@@ -290,16 +290,17 @@ nav {
     /* Features Section */
 
     #features {
-        height: ;
+        height: 100vh;
     }
     
     .feature-box {
         width: 100%;
-        height: ;
-        float: ;
+        height: 33.33%;
+        float: none;
         text-align: center;
-        padding: 100px 20px;
+        padding: 12vh 5vw;
     }
+
     
     .feature-box p {
         margin: 20px 30px;
